--- a/CPP01/.vscode/settings.json
+++ b/CPP01/.vscode/settings.json
@@ -118,5 +118,6 @@
     "unordered_map": "cpp",
     "utility": "cpp",
     "vector": "cpp"
-  }
+  },
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
