cani e gatti bau mew

--- a/CPP04/ex00/Makefile
+++ b/CPP04/ex00/Makefile
@@ -3,9 +3,9 @@ NAME = ex00
 SRCS = main.cpp \
       Animal.cpp \
       Cat.cpp \
-      Dog.cpp \
-      WrongCat.cpp \
-      WrongDog.cpp \
+    #   Dog.cpp \
+    #   WrongCat.cpp \
+    #   WrongDog.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
