--- a/CPP04/ex01/Makefile
+++ b/CPP04/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME = ex00
+NAME = ex01
 
 SRCS = main.cpp \
       Animal.cpp \
@@ -7,6 +7,7 @@ SRCS = main.cpp \
 	  WrongAnimal.cpp \
       WrongCat.cpp \
       WrongDog.cpp \
+	  Brain.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
