--- a/CPP05/ex01/Makefile
+++ b/CPP05/ex01/Makefile
@@ -1,7 +1,8 @@
-NAME = ex00
+NAME = ex01
 
 SRCS = main.cpp \
-		Bureaucrat.cpp \
+      Bureaucrat.cpp \
+	  Form.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
