--- a/CPP05/ex03/Makefile
+++ b/CPP05/ex03/Makefile
@@ -1,4 +1,4 @@
-NAME = ex02
+NAME = ex03
 
 SRCS = main.cpp \
       Bureaucrat.cpp \
@@ -6,6 +6,7 @@ SRCS = main.cpp \
 	  ShrubberyCreationForm.cpp \
 	  RobotomyRequestForm.cpp \
 	  PresidentialPardonForm.cpp\
+	  Intern.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
