--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,10 @@
     "ostream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "ctime": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "sstream": "cpp"
   }
 }
