--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,10 @@
     "ctime": "cpp",
     "list": "cpp",
     "map": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "iomanip": "cpp",
+    "bitset": "cpp",
+    "cstring": "cpp",
+    "regex": "cpp"
   }
 }
