bebugging jacobsthal numbers part

--- a/CPP09/ex02/Makefile
+++ b/CPP09/ex02/Makefile
@@ -9,11 +9,11 @@ all: $(NAME)
 
 $(NAME): $(OBJS)
 	@echo "Compiling $(NAME)..."
-	c++ -std=c++98 -Wall -Wextra -Werror $(OBJS) -o $(NAME)
+	c++ -g -std=c++98 -Wall -Wextra -Werror  $(OBJS) -o $(NAME)
 
 %.o: %.cpp
 	@echo "Compiling $<..."
-	c++ -std=c++98 -Wall -Wextra -Werror -c $< -o $@
+	c++ -g -std=c++98 -Wall -Wextra -Werror  -c $< -o $@
 
 clean:
 	@echo "Cleaning..."
