--- a/CPP09/ex02/.vscode/launch.json
+++ b/CPP09/ex02/.vscode/launch.json
@@ -5,20 +5,12 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": ["9", "2", "4" ,"1", "7", "3", "5", "6", "0", "10"],
       "stopAtEntry": false,
       "externalConsole": false,
       "cwd": "/home/emma/Desktop/42CPP/CPP09/ex02",
-      "program": "/home/emma/Desktop/42CPP/CPP09/ex02/build/Debug/outDebug",
+      "program": "/home/emma/Desktop/42CPP/CPP09/ex02/PmergeMe",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
     }
   ]
 }
